@@ -342,4 +342,15 @@ class LMSEventManager extends LMSManager implements LMSEventManagerInterface
 				AND (enddate > ? OR (enddate = ? AND endtime > ?))',
 			array($enddate, $enddate, $endtime, $begindate, $begindate, $begintime));
 	}
+
+    public function AssignCurrentUserToEvent($id, $userid) {
+        if ($this->db->Execute('INSERT into eventassignments (eventid, userid) VALUES (?, ?)', array($id,$userid)))
+            $this->db->Execute('INSERT into eventassignments (eventid, userid) VALUES (?, ?)', array($id,$userid));
+
+    }
+
+    public function DeassignCurrentUserFromEvent($id, $userid) {
+        if ($this->db->Execute('DELETE FROM eventassignments WHERE eventid = ? AND userid = ?', array($id,$userid)))
+            $this->db->Execute('DELETE FROM eventassignments WHERE eventid = ? AND userid = ?', array($id,$userid));
+    }
 }
