@@ -72,6 +72,7 @@ version ?.??.?? (????-??-??):
   - ehnancement: helpdesk ticket unread status introduced [chilan]
   - improvement: mark current ticket message with brown color border [chilan]
   - improvement: show user info column in customer message box [chilan]
+  - enhancement: added button in eventlistboxrow whitch assigns current logged user to event [interduo]
 
 version 1.11.23 (2018-03-21):
 
